# WINAK

./: .env  .gitignore  .pre-commit-config.yaml  README.md  compose.prod.yaml  compose.yaml
.github/workflows/: deploy.yaml  github-actions.yaml  tests.yaml
caddy/: Caddyfile  Dockerfile
client/: Dockerfile  index.html  package-lock.json  package.json
client/src/: App.tsx  main.tsx
client/src/components/: Navbar.css  Navbar.tsx
client/src/functions/: register.ts
client/src/pages/: About.tsx  Activities.tsx  Contact.tsx  Error.tsx  Home.tsx  Login.tsx  Partnerships.tsx  Register.css  Register.tsx
client/src/requests/: axios.ts
client/src/requests/authentication/: login.ts  logout.ts  register.ts  status.ts
docs/: mkdocs.yml
docs/docs/: deploy.md  index.md
docs/docs/services/: tuyaux.md
docs/docs/stylesheets/: extra.css
env_files/: dev.env  prod.env
env_files/dev/: client.env  server.env
env_files/prod/: client.env  server.env
server/: Dockerfile  Dockerfile.prod  pyproject.toml
server/server/server/: settings.py  urls.py
server/server/users/: admin.py  models.py  serializers.py  urls.py  views.py
server/server/users/migrations/: 0001_initial.py  0002_alter_user_email.py
