[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Laurens De Wachter <93316351+Laurensdewachter@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.2"
psycopg = "^3.2.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
